<resources>
    <string name="app_name">PostExample</string>
    <string name="user_name">이름</string>
    <string name="user_email">이메일</string>
    <string name="user_password">비밀번호</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="signup">회원가입</string>
    <string name="edit_input_email">이메일을 입력해주세요.</string>
    <string name="edit_input_password">비밀번호를 입력해주세요.</string>
    <string name="title_home">Home</string>
    <string name="title_post_add">Post Add</string>
    <string name="title_user_info">User Info</string>
    <string name="edit_input_title">제목을 입력해주세요.</string>
    <string name="edit_input_content">내용을 입력해주세요.</string>
    <string name="upload_post">올리기</string>
</resources>