<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_home"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/item_postadd"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/baseline_post_add_24"
        android:title="@string/title_post_add"/>

    <item
        android:id="@+id/item_info"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_user_info"/>
</menu>