<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.example.postexample.ui.viewmodel.LogInViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_name_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_signup"/>

        <TextView
            android:id="@+id/tv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/tb_signup"
            app:layout_constraintStart_toStartOf="@id/tv_signup_title"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@={viewmodel.name}"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/tv_name_title"
            app:layout_constraintStart_toStartOf="@id/tv_signup_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintStart_toStartOf="@id/tv_signup_title"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@={viewmodel.email}"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tv_email_title"
            app:layout_constraintStart_toStartOf="@id/tv_signup_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_pw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_password"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="@id/tv_signup_title"/>

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@={viewmodel.pw}"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/tv_pw_title"
            app:layout_constraintStart_toStartOf="@id/tv_signup_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/signup"
            android:textColor="@color/btn_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/selector_btn_background"
            app:layout_constraintTop_toBottomOf="@id/et_pw"
            app:layout_constraintStart_toStartOf="@id/tv_signup_title"
            app:layout_constraintEnd_toEndOf="@id/et_pw"
            android:onClick="@{() -> viewmodel.doSignUp(viewmodel.name, viewmodel.email, viewmodel.pw)}"/>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewmodel.isLoading ? View.VISIBLE : View.GONE, default = gone}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
